objects/Asset_MACD_Permissions__c.object
<CustomObject>
    <fields>
        <fullName>Cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cancel Permission</description>
        <inlineHelpText>Cancel Permission</inlineHelpText>
        <label>Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clone_Quote_With_New_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone Quote With New Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migrate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Migrate Permission</description>
        <inlineHelpText>Migrate Permission</inlineHelpText>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Modify Permission</description>
        <inlineHelpText>Modify Permission</inlineHelpText>
        <label>Modify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting to control Resume action permissions.</description>
        <label>Resume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suspend Permission</description>
        <inlineHelpText>Suspend Permission</inlineHelpText>
        <label>Suspend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version_Protection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Version Protection</description>
        <inlineHelpText>Version Protection</inlineHelpText>
        <label>Version Protection</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>